make insta card

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>hello world</h1>
-    <h2>hy</h2>
+    <div class="box">
+        <img src="./sodapdf-converted.png" alt="" class="imgcard">
+        <div class="box2">
+            <h2 class="heading"> Instagram</h2>
+            <p class="para1">Instagram is a free photo and video sharing app available on iPhone and Android. People can
+                upload photos or videos to our service and share them with their followers or with a select group of
+                friends. They can also view, comment and like posts shared by their friends on Instagram.</p>
+        </div>
+        <button class="b1">Follow Me </button>
+    </div>
+
+
 </body>
+
 </html>
